--- a/Web/EvenTotalSecureLogin/nottobeseen/templates/index.html
+++ b/Web/EvenTotalSecureLogin/nottobeseen/templates/index.html
@@ -55,8 +55,8 @@
         crossorigin="anonymous"></script>
         <!-- Seriously, Do you sneak into to your neighbours house, just like this? -->
         <!-- Grow Up -->
-        <!-- I can only give you this much MAZ3{1n5p3ct0r_E*p0 -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        <!-- But no luck this time. -->
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
 </body>
