--- a/Web/EvenTotalSecureLogin/nottobeseen/templates/login.html
+++ b/Web/EvenTotalSecureLogin/nottobeseen/templates/login.html
@@ -25,9 +25,7 @@
             <div class="form-group">
                 <label for="exampleInputEmail1">Username</label>
                 <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="username">
-                <!-- s3s_51te5} -->
-                <!-- I hope to see you soon. -->
-                <!-- Don't stop sneaking -->
+                <!-- Again Sorry for bad luck :( -->
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
