--- a/Web/TotalSecureLogin/templates/index.html
+++ b/Web/TotalSecureLogin/templates/index.html
@@ -56,6 +56,7 @@
         <!-- Seriously, Do you sneak into to your neighbours house, just like this? -->
         <!-- Grow Up -->
         <!-- I can only give you this much MAZ3{1n5p3ct0r_E*p0 -->
+        <!-- And don't dare to think that this works everytime. Keep Searching -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
